--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
 <head>
 <meta charset="utf-8">
-<title>Плюс Некит</title>
+<title>Супер секретное название</title>
 <link rel="stylesheet" media="screen" href="css/normalize.css" />
 <link rel="stylesheet" media="screen" href="css/style.css" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
