--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="bg-gradient"></div>
   <div class="container">
     <h1>Секретный таймер</h1>
-    <h2>Точно время определенного события</h2>
+    <h2>Точное время определенного события</h2>
     <div id="CDT">
       
       <span class="number-wrapper"><div class="line"></div><div class="caption">Дни</div><span class="number sec" id="text_day"></span></span>
